<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    tools:context=".Contato">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="?attr/CardViewColor"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">


            <ImageView
                android:id="@+id/imageCapa"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/me">

            </ImageView>

            <TextView
                android:id="@+id/textNome"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/Nome"
                android:textAlignment="textStart"
                android:textColor="?attr/textColorTitulo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textIdade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/Idade"
                android:textColor="?attr/textColorTitulo"
                android:textSize="18sp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MeiosDeContato"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center|top"
            android:textColor="?attr/textColorTitulo"/>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CompartilharEmail"
            android:background="@drawable/custom_button"
            android:textColor="#fff"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btnTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CompartilharTelefone"
            android:background="@drawable/custom_button"
            android:textColor="#fff"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btnGitHub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CompartilharGitHub"
            android:background="@drawable/custom_button"
            android:textColor="#fff"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</LinearLayout>