<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="?attr/CardViewColor"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">


            <ImageView
                android:id="@+id/imageCapa"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/me">

            </ImageView>

            <TextView
                android:id="@+id/textNome"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/Nome"
                android:textAlignment="textStart"
                android:textColor="?attr/textColorTitulo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textIdade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/Idade"
                android:textColor="?attr/textColorTitulo"
                android:textSize="18sp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Experiencia"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="?attr/textColorTitulo"/>

            <TextView
                android:id="@+id/textTJSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/TJSP"
                android:textAlignment="center"
                android:textColor="?attr/textColorTexto"/>

            <TextView
                android:id="@+id/textTEFTI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:text="@string/Tefti"
                android:textAlignment="center"
                android:textColor="?attr/textColorTexto"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="?attr/CardViewColor"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textEducacao"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/Educação"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="?attr/textColorCardView"/>


            <TextView
                android:id="@+id/textDiferenciais"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/Diferenciais"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="?attr/textColorCardView"/>

            <TextView
                android:id="@+id/textContato"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/Contato"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="?attr/textColorCardView"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:gravity="center|bottom"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/TrocaModo"
            android:textColor="?attr/textColorTexto"/>

        <Switch
            android:id="@+id/switchModo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_margin="3dp" />

    </LinearLayout>


</LinearLayout>